<resources>
    <string name="app_name">DEPIC</string>
    <string name="IntitulerQuestionChoixUnique">La question à choix unique</string>
    <string name="TexteRadioButton1ChoixUnique">RadioButton</string>
    <string name="TexteRadioButton2ChoixUnique">RadioButton</string>
    <string name="IntitulerQuestionChoixMultiple">La question à choix multiple</string>
    <string name="TexteToggleButtonChoixmultiple1">ToggleButton1</string>
    <string name="TexteToggleButtonChoixmultiple2">ToggleButton2</string>
    <string name="IntitulerQuestionTexteLibre">La question à réponse libre</string>
    <string name="IntitulerQuestion">La question de base.</string>
    <string name="EditTexteHint">Réponse libre.</string>
    <string name="texte_cliquage_qcu">Cliquage QCU</string>
    <string name="texte_cliquage_qcm">Cliquage QCM</string>
    <string name="TitreFormulaire">Formulaire :</string>


    // Textes pour les bouttons
    <string name="Texte_Button_Valider_Enregistrer">Valider</string>
    <string name="Texte_Button_Reinitialisation">Réinitialiser</string>
    <string name="Texte_Button_Precedent">Précédent</string>
    <string name="Texte_Button_Suivant">Suivant</string>


    // Textes pour les dialog
    <string name="Button_Accepter">Accepter</string>
    <string name="Button_Refuser">Refuser</string>
    <string name="Message_Utilisateur">Si vous voulez vous connecter, donnez une adresse email valide et appuyez sur le bouton Accepter, toute autre action vous connectera en tant qu\'utilisateur inconnu.</string>
    <string name="Message_Confirmation_Reinitialisation">Si vous voulez réinitialiser toutes les réponses de ce sondage, appuyez sur Accepter</string>
    <string name="Message_Confirmation_Envoi_Donnees">Si vous voulez enregistrer ou envoyer les réponses à ce sondage, appuyez sur Accepter</string>
    <string name="Texte_Valider_Changement_Categories">Valider les changements.</string>
    <string name="Texte_Item_Categories">Categories</string>
    <string name="Texte_TexteView_Categorie">Texte bouton catégorie</string>
</resources>
