<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/ParentLayout"
        tools:context=".MainActivity"
    >
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:spinnerMode="dropdown"
            />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:padding="10dp"
            android:fillViewport="false"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/layout_general"
            >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TitreFormulaire"
                    android:id="@+id/TitreFormulaire"
                />
            </LinearLayout>
        </ScrollView>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/Layout_Buttons_Precedent_Suivant"
            >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/Button_Precedent"
                android:text="@string/Texte_Button_Precedent"
                android:onClick="PassageQuestionPrecedente"
                android:background="@android:color/holo_blue_light"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/Button_Suivant"
                android:text="@string/Texte_Button_Suivant"
                android:onClick="PassageQuestionSuivante"
                android:background="@android:color/holo_blue_light"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:id="@+id/Layout_Buttons_Valider_Reinitialiser"
            >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/Button_Validation_Enregistrement"
                android:text="@string/Texte_Button_Valider_Enregistrer"
                android:onClick="validationSondage"
                android:background="@android:color/holo_green_dark"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/Button_Reinitialisation"
                android:text="@string/Texte_Button_Reinitialisation"
                android:onClick="ReinitialiserLayoutSondage"
                android:background="@android:color/holo_red_light"
                />

        </LinearLayout>


    </LinearLayout>





